--- a/desafios/d10/style.css
+++ b/desafios/d10/style.css
@@ -53,13 +53,14 @@ header > h1{
 }
 
 header > p{
+    font-family: var(--font-padrão);
     color: white;
     font-size: 1.2em;
     max-width: 600px;
     padding-right: 10px;
     padding-left: 10px;
-    margin-bottom: 20px;
     margin: auto;
+    padding-bottom: 50px;
     text-shadow: 2px 2px 0px rgb(0, 0, 0.315);
 }
 
