--- a/Site/style.css
+++ b/Site/style.css
@@ -22,7 +22,7 @@
 }
 
 body{
-    background-color: var(--cor02);
+    background-color: var(--cor06);
     font-family: var(--fonte-padrao);
 }
 
@@ -52,6 +52,7 @@ header > p{
     padding-right: 10px;
     padding-left: 10px;
     margin: auto;
+    margin-bottom: 30px;
 }
 
 nav{
@@ -62,6 +63,7 @@ nav{
 nav > a{
     color: var(--cor02);
     padding: 5px;
+    margin: auto;
     border-radius: 10px;
     text-decoration: underline;
     font-weight: bold;
@@ -76,10 +78,55 @@ nav > a:hover{
     transition-duration: .5s;
 }
 
-main{
-    background-color: var(--cor05);
-    min-width: 280px;
-    padding: 40px;
+.promoçãofrase{
+    background-color: var(--cor03);
+    color: white;
+    height: 40px;
+    font: normal lighter 1.5em var(--fonte-padrao);
+    padding: 7px 0px 0px 15px;
 }
 
+main{
+    background-color: var(--cor05);
+    max-width: 900px;
+    min-width: 200px;
+    padding: 100px 80px 10px 80px;
+    margin: auto;
 
+}
+    
+main > div.destaqueinicial{
+    display:inline-block;
+    background-color: lightgray;
+    padding: -1px 10px 10px 10px;
+    margin: 0px 0px 20px 0px;
+    height: 200px;
+    width: 500px;
+    
+}
+
+.imagemlink{
+    
+}
+
+main > div.videoyt{
+    background-color: var(--cor05);
+    margin: 0px -80px 30px -80px ;
+    padding: 20px;
+    padding-bottom: 50%;
+
+    position: relative;
+}
+
+div.videoyt > iframe{
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+}
+
+footer{
+        background-color: var(--cor04);
+        padding: 100px;
+}
