--- a/desafios/d-cordel/style.css
+++ b/desafios/d-cordel/style.css
@@ -27,11 +27,15 @@ header{
 }
 
 header > h1{
+    font-family:'passion' ;
+    font-size: 5vw;
+    padding: 10px;
     padding-top:50px;
     font-variant: small-caps;
 }
 
 header > p{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     padding-bottom: 50px;
 }
 
@@ -46,10 +50,12 @@ header a:hover, footer a:hover{
 }
 
 section{
+    font-family: 'sriracha';
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-size: 3vw;
 }
 
 section.normal{
@@ -60,11 +66,25 @@ section.normal{
 section.imagem{
     background-color: rgb(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.562);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p{
-    width: 400px;
-    background-color: rgb(0, 0, 0.253);
+    display: inline-block;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.377);
+    text-shadow: 1px 1px 0px black;
+}
+
+section#img01{
+    background-image: url('imagens/background001.jpg');
+    background-position:right center;
+}
+
+section#img02{
+    background-image: url('imagens/background002.jpg');  
 }
 
 footer{
